# morphis

./: .gitignore  LICENSE  Makefile  README.md  comments.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
_archive/: rotations.py  vectors.py
docs/: 0_project-overview.md  challenge.md  ga-enhancements.md  ga-unit-tests-1.md  ga-unit-tests-2.md  motors-unit-tests.md  operators-future.md  pga-blades.md  project-overview.md  style-guide.md  the-morphis-project.md  visualization-architecture.md
docs/1_concepts/: 1_foundations.md  2_clifford-algebra.md  3_objects.md  4_products.md  5_duality.md  6_metric.md  7_outermorphisms.md  8_exponentials.md  9_transforms.md  README.md
docs/2_unit-tests/: elements.md  operations.md  transforms.md
docs/3_api/: 1_api-overview.md  2_api-signatures.md  api-detailed.md  api.md
docs/4_design/: 1_module-structure.md  2_naming-conventions.md  3_class-hierarchy.md  4_visuals_architecture.md
docs/5_dev/: 1_architecture.md  2_style-guide.md  3_unit-tests.md  README.md
docs/unit-tests/: elements.md  operations.md
figures/: basis_bivector.mtl  basis_bivector.scene
src/morphis/: __init__.py  cli.py
src/morphis/_legacy/: __init__.py  rotations.py
src/morphis/algebra/: __init__.py  contraction.py  patterns.py  solvers.py  specs.py
src/morphis/core/: __init__.py  coordinates.py  rotations.py  smoothing.py  vectors.py
src/morphis/elements/: __init__.py  base.py  blade.py  elements.py  field.py  frame.py  lot_indexed.py  metric.py  multivector.py  operator.py  protocols.py  surface.py  tensor.py  vector.py
(+160 files in other folders)
