[project]
name = "morphis"
version = "0.1.0"
description = "A unified mathematical framework for geometric computation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "scipy>=1.16.3",
    "tomli>=2.3.0",
]

[project.optional-dependencies]
dev = [
  "build",
  "flake8",
  "ipython",
  "pip-tools",
  "pre-commit",
  "pytest",
  "python-lsp-server",
  "ruff",
]

[project.scripts]
morphis = "morphis:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
